add tab logic in footer

--- a/src/dada-app/elements/dada-action.html
+++ b/src/dada-app/elements/dada-action.html
@@ -10,9 +10,9 @@
             }
         </style>
         <paper-tabs selected="{{selected}}" scrollable>
-            <paper-tab on-click="_activeChanged">The first tab</paper-tab>
-            <paper-tab on-click="_activeChanged">Tab two</paper-tab>
-            <paper-tab on-click="_activeChanged">The third tab</paper-tab>
+            <paper-tab on-click="_activeChanged">Choisir</paper-tab>
+            <paper-tab on-click="_activeChanged">Acheter</paper-tab>
+            <paper-tab on-click="_activeChanged">Visiter</paper-tab>
         </paper-tabs>
 
         <iron-collapse id="collapse">
