--- a/src/dada-app/elements/dada-footer.html
+++ b/src/dada-app/elements/dada-footer.html
@@ -1,22 +1,31 @@
-<link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="dada-prez.html">
 
 <dom-module id="dada-footer">
   <template>
     <style>
-      :host {
-        display: flex;
+       :host {
+        display: block;
       }
     </style>
-    
-    <div>Restez informés</div>
-    <input type="email" name="mail" value="mon mail"></input>
-    <paper-button raised class="indigo">M'inscrire à la newsletter</paper-button>
-    <div>plop</div>
-    <div>plop</div>
-    <div>plop</div>
-    <div>plop</div>
-    <div>plop</div>
+    <paper-tabs selected="{{selected}}" scrollable>
+      <paper-tab on-click="_activeChanged" onload="_display">Presentation</paper-tab>
+      <paper-tab on-click="_activeChanged">Plus d'infos</paper-tab>
+      <paper-tab on-click="_activeChanged">Avis</paper-tab>
+      <paper-tab on-click="_activeChanged">En ce moment au musée</paper-tab>
+    </paper-tabs>
+
+    <iron-collapse id="collapse">
+      <iron-pages selected="{{selected}}">
+        <div>
+          <dada-prez></dada-prez>
+        </div>
+        <div>Two</div>
+        <div>Three</div>
+      </iron-pages>
+    </iron-collapse>
   </template>
 
   <script>
@@ -34,6 +43,14 @@
           }
         };
       }
+
+      _activeChanged() {
+        console.log("collapse state : ", this.$.collapse.opened, this.$.collapse)
+        if (!this.$.collapse.opened) {
+          this.$.collapse.toggle();
+        }
+      }
+
     }
 
     window.customElements.define(DadaFooter.is, DadaFooter);
