add footer style + add fonts to implement + add real color for header title gradient + add cross to close item action + test for CSS flex box

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -2,11 +2,14 @@
 <link rel="import" href="elements/dada-header.html">
 <link rel="import" href="elements/dada-footer.html">
 <link rel="import" href="elements/dada-action.html">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 <dom-module id="dada-app">
   <template>
     <style>
       :host {
         display: block;
+        font-family: 'Montserrat', sans-serif;
       }
     </style>
     <dada-header></dada-header>
