--- a/src/dada-app/elements/dada-header.html
+++ b/src/dada-app/elements/dada-header.html
@@ -17,7 +17,7 @@
       }
 
       .title-style, .gradient:hover {
-        background: linear-gradient( to right, pink,orange);
+        background: linear-gradient( to right, #DA30B7,#FF974F);
         -webkit-background-clip: text;
         color: transparent;
       }
@@ -34,12 +34,12 @@
       }
 
     </style>
-    <h1 class="title-style ">DADA</h1>
+    <h1 class="title-style "><b>DADA</b></h1>
     <div class="container">
-      <div class="itemMenu gradient">Billeterie</div>
-      <div class="itemMenu gradient">S'abonner</div>
-      <div class="itemMenu gradient">Se connecter</div>
-      <div class="itemMenu gradient">S'inscrire</div>
+      <div class="itemMenu gradient"><b>Billeterie</b></div>
+      <div class="itemMenu gradient"><b>S'abonner</b></div>
+      <div class="itemMenu gradient"><b>Se connecter</b></div>
+      <div class="itemMenu gradient"><b>S'inscrire</b></div>
       <div class="itemMenu">|</div>
       <div class="itemMenu"><iron-icon icon="icons:search"></iron-icon></div>
       <div class="itemMenu"><iron-icon icon="icons:face"></iron-icon></div>
