--- a/src/dada-app/elements/dada-footer.html
+++ b/src/dada-app/elements/dada-footer.html
@@ -7,16 +7,21 @@
   <template>
     <style>
        :host {
-        display: block;
+        position:absolute;
+        bottom:0;
+        width:100%;  
+        box-shadow: 0px -1px 2px grey;
       }
+
     </style>
+
     <paper-tabs selected="{{selected}}" scrollable>
-      <paper-tab on-click="_activeChanged" onload="_display">Presentation</paper-tab>
+      <paper-tab on-click="_activeChanged">Presentation</paper-tab>
       <paper-tab on-click="_activeChanged">Plus d'infos</paper-tab>
       <paper-tab on-click="_activeChanged">Avis</paper-tab>
       <paper-tab on-click="_activeChanged">En ce moment au musée</paper-tab>
     </paper-tabs>
-
+    
     <iron-collapse id="collapse">
       <iron-pages selected="{{selected}}">
         <div>
