--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>dada</title>
+    <title>DADA</title>
     <meta name="description" content="plop">
 
     <!-- See https://goo.gl/OOhYW5 -->
