add event listner for button redirection

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -2,6 +2,7 @@
 <link rel="import" href="elements/dada-header.html">
 <link rel="import" href="elements/dada-footer.html">
 <link rel="import" href="elements/dada-action.html">
+<link rel="import" href="elements/dada-exposition.html">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 <dom-module id="dada-app">
