--- a/src/dada-app/elements/dada-table.html
+++ b/src/dada-app/elements/dada-table.html
@@ -66,7 +66,7 @@
             </tr>
         </table>
         <div>
-            <paper-button raised noink class="custom" onclick="redirection(this)">Achetez vos places</paper-button>
+            <paper-button raised noink class="custom" on-click="handleClick">Achetez vos places</paper-button>
         </div>
     </template>
 
@@ -84,16 +84,21 @@
                         value: 'dada-table'
                     }
                 };
+            };
+
+            handleClick(el) {
+                this.dispatchEvent(new CustomEvent('kick', location.href = 'src/dada-app/elements/dada-exposition.html'));
             }
 
-            redirection(el) {
-                el.addEventListener('transitionend', function(e) {
-                    location.href = 'src/dada-app/elements/dada-exposition.html';
-                });
-            }
         }
 
         window.customElements.define(DadaTable.is, DadaTable);
-
     </script>
+
+    <script>
+        document.querySelector('dada-table').addEventListener('kick', function (e) {
+            console.log(e.detail.kicked); // true
+        })
+    </script>
+
 </dom-module>
