add webcomponent for slideshow + new element to implement slideshow

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -2,7 +2,7 @@
 <link rel="import" href="elements/dada-header.html">
 <link rel="import" href="elements/dada-footer.html">
 <link rel="import" href="elements/dada-action.html">
-<link rel="import" href="elements/dada-exposition.html">
+<link rel="import" href="elements/dada-slide.html">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 <dom-module id="dada-app">
@@ -14,6 +14,7 @@
       }
     </style>
     <dada-header></dada-header>
+    <dada-slide></dada-slide>
     <dada-action></dada-action>
     <dada-footer></dada-footer>
   </template>
