add boxes for news + flex style

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -3,6 +3,7 @@
 <link rel="import" href="elements/dada-footer.html">
 <link rel="import" href="elements/dada-action.html">
 <link rel="import" href="elements/dada-slide.html">
+<link rel="import" href="elements/dada-news.html">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 <dom-module id="dada-app">
@@ -14,9 +15,10 @@
       }
     </style>
     <dada-header></dada-header>
-    <dada-slide></dada-slide>
+    <!--<dada-slide></dada-slide>
     <dada-action></dada-action>
-    <dada-footer></dada-footer>
+    <dada-footer></dada-footer>-->
+    <dada-news></dada-news>
   </template>
   
   <script>
