--- a/src/dada-app/elements/dada-prez.html
+++ b/src/dada-app/elements/dada-prez.html
@@ -9,7 +9,7 @@
       }
     </style>
 
-    <div>Logo YT</div>
+    <div><img src="src/img/youtube-logo-grey.png" /></div>
     <div>Logo FB</div>
     <div>Logo TT</div>
 
