--- a/src/dada-app/elements/dada-slide.html
+++ b/src/dada-app/elements/dada-slide.html
@@ -4,14 +4,14 @@
     <template>
         <style>
              :host {
-                display: flex;
                 width: 100%;
             }
 
             .custom-slider {
                 --paper-slide-height: 100%;
                 --paper-slide-width: 100%;
-                --paper-slide-dot-styles: black;
+                --paper-slide-dot: black;
+                --paper-slide-dot-selected:#fff;
             }
 
             .custom-slide {
