--- a/src/dada-app/elements/dada-table.html
+++ b/src/dada-app/elements/dada-table.html
@@ -37,11 +37,21 @@
 
             paper-button.custom {
                 background-color: black;
-                -webkit-radius: 2dp;
+                -webkit-radius: 0dp;
                 font-size: 11px;
                 margin: 0.5em;
                 color: #fff;
             }
+
+            .custom:hover {
+                background-color: #fff;
+                -webkit-radius: 0dp;
+                font-size: 11px;
+                margin: 0.5em;
+                color: black;
+                font-weight: bold;
+            }
+
         </style>
 
         <table>
