add new img for slider + new style for news element

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -15,8 +15,9 @@
       }
     </style>
     <dada-header></dada-header>
-    <!--<dada-slide></dada-slide>
-    <dada-action></dada-action>
+    <dada-slide></dada-slide>
+    
+    <!--<dada-action></dada-action>
     <dada-footer></dada-footer>-->
     <dada-news></dada-news>
   </template>
