--- a/src/dada-app/elements/dada-slide.html
+++ b/src/dada-app/elements/dada-slide.html
@@ -5,6 +5,7 @@
         <style>
              :host {
                 width: 100%;
+                background-image: url(img/FOND.png);
             }
 
             .custom-slider {
@@ -24,9 +25,9 @@
         </style>
 
         <l2t-paper-slider class="custom-slider" auto-progress slide-duration="4" sensitivity="slow" total-slides="3">
-            <paper-slide><img src="src/img/slide1.png" class="custom-slide" /></paper-slide>
-            <paper-slide><img src="src/img/slide2.png" class="custom-slide" /></paper-slide>
-            <paper-slide><img src="src/img/slide3.png" class="custom-slide" /></paper-slide>
+            <paper-slide><img src="src/img/00-HOME-DADA.png" class="custom-slide" /></paper-slide>
+            <paper-slide><img src="src/img/00-HOME-DADA-2.png" class="custom-slide" /></paper-slide>
+            <paper-slide><img src="src/img/00-HOME-DADA-3.png" class="custom-slide" /></paper-slide>
         </l2t-paper-slider>
 
     </template>
