add news style css

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -15,7 +15,7 @@
       }
     </style>
     <dada-header></dada-header>
-    <dada-slide></dada-slide>
+    <!--<dada-slide></dada-slide>-->
     
     <!--<dada-action></dada-action>
     <dada-footer></dada-footer>-->
