--- a/src/dada-app/elements/dada-slide.html
+++ b/src/dada-app/elements/dada-slide.html
@@ -20,6 +20,8 @@
                 justify-content: center;
                 /* align horizontal */
                 align-items: center;
+                width: 100%;
+                height: auto;
                 /* align vertical */
             }
         </style>
