chnage css style for footer + logo header + picto header + css for all pictures

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -12,14 +12,14 @@
       :host {
         display: block;
         font-family: 'Montserrat', sans-serif;
+        width: 100%;
       }
     </style>
     <dada-header></dada-header>
-    <!--<dada-slide></dada-slide>-->
-    
-    <!--<dada-action></dada-action>
-    <dada-footer></dada-footer>-->
+    <dada-slide></dada-slide>
+    <dada-action></dada-action>
     <dada-news></dada-news>
+    <dada-footer></dada-footer>
   </template>
   
   <script>
