--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="import" href="/src/dada-app/dada-app.html">
   </head>
-  <body style="margin:0;">
+  <body style="margin:0; width:100%">
     <dada-app></dada-app>
   </body>
 </html>
