--- a/src/dada-app/elements/dada-footer.html
+++ b/src/dada-app/elements/dada-footer.html
@@ -1,36 +1,83 @@
-<link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html">
-<link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="dada-prez.html">
 
 <dom-module id="dada-footer">
   <template>
     <style>
        :host {
-        position:absolute;
-        bottom:0;
-        width:100%;  
-        box-shadow: 0px -1px 2px grey;
+        position: relative;
+        bottom: 0;
+        width: 100%;
       }
 
+      .footer {
+        display: flex;
+        background-color: black;
+        color: white;
+      }
+
+      .column {
+        flex: 1;
+        margin: 3em;
+      }
+
+      .column-left {
+        order: 1;
+      }
+
+      .column-center {
+        order: 2;
+      }
+
+      .column-right {
+        margin-left: 3em;
+        order: 3;
+      }
+
+      .column-social {
+        order: 4;
+      }
+
+      .img {
+        width: 200px;
+      }
+
+      .column-content {
+        margin:2em;
+      }
+      
     </style>
 
-    <paper-tabs selected="{{selected}}" scrollable>
-      <paper-tab on-click="_activeChanged">Presentation</paper-tab>
-      <paper-tab on-click="_activeChanged">Plus d'infos</paper-tab>
-      <paper-tab on-click="_activeChanged">Avis</paper-tab>
-      <paper-tab on-click="_activeChanged">En ce moment au musée</paper-tab>
-    </paper-tabs>
-    
-    <iron-collapse id="collapse">
-      <iron-pages selected="{{selected}}">
-        <div>
-          <dada-prez></dada-prez>
+    <div class="footer">
+      <div class="column colum-left">
+        <div class="column-content">
+          <p>Audiodescription</p>
+          <p>Centre d'aide </p>
+          <p>Ralation</p>
+          <p>Investisseurs </p>
+          <p>Recrutement </p>
+          <p>Conditions d'utilisation</p>
         </div>
-        <div>Two</div>
-        <div>Three</div>
-      </iron-pages>
-    </iron-collapse>
+      </div>
+
+      <div class="column colum-center">
+        <div class="column-content">
+         <p>S'abonner</p>
+         <p>Se connecter</p>
+         <p>Tarifs</p>
+         <p> A propos de DADA</p>
+        </div>
+      </div>
+
+      <div class="column colum-right">
+        <div class="column-content">
+          <p>Presse</p>
+          <p>Confidentialité</p>
+        </div>
+      </div>
+
+      <div class="column colum-social ">
+        <img class="img" src="src/img/reseauxsociaux.png" />
+      </div>
+    </div>
   </template>
 
   <script>
@@ -47,13 +94,6 @@
             value: 'dada-footer'
           }
         };
-      }
-
-      _activeChanged() {
-        console.log("collapse state : ", this.$.collapse.opened, this.$.collapse)
-        if (!this.$.collapse.opened) {
-          this.$.collapse.toggle();
-        }
       }
 
     }
