add picto for dada action element

--- a/src/dada-app/elements/dada-table.html
+++ b/src/dada-app/elements/dada-table.html
@@ -40,6 +40,7 @@
                 -webkit-radius: 0dp;
                 font-size: 11px;
                 margin: 0.5em;
+                margin-top: 15em;
                 color: #fff;
             }
 
@@ -48,6 +49,7 @@
                 -webkit-radius: 0dp;
                 font-size: 11px;
                 margin: 0.5em;
+                margin-top: 15em;
                 color: black;
                 font-weight: bold;
             }
