--- a/src/dada-app/elements/dada-action.html
+++ b/src/dada-app/elements/dada-action.html
@@ -12,15 +12,13 @@
 
             .papertabs-style {
                 --paper-tabs-selection-bar-color: black;
-                --paper-tabs-selection-bar:
-                {
-                    width:100%;
-                    height: 100px;
-                }
             }
 
             .papertab-style {
-                width:28vw;
+                --paper-tab:{
+                    width:28vw;
+                    height: auto;
+                }
             }
 
            /* a retester 
@@ -40,9 +38,14 @@
 
         </style>
         <paper-tabs class="papertabs-style" selected="{{selected}}" scrollable>
-            <paper-tab on-click="_activeChanged"><iron-icon icon="icons:visibility"></iron-icon>Choisir </paper-tab>
-            <paper-tab on-click="_activeChanged">Acheter</paper-tab>
-            <paper-tab on-click="_activeChanged"><iron-icon icon="hardware:phonelink"></iron-icon>Visiter</paper-tab>
+            <paper-tab  class="papertab-style" on-click="_activeChanged">
+                <div>
+                    <img src="src/img/device.png" class="custom-slide"/>
+                    <p>Choisir</p>
+                </div>
+            </paper-tab>
+            <paper-tab  class="papertab-style" on-click="_activeChanged">Acheter</paper-tab>
+            <paper-tab  class="papertab-style" on-click="_activeChanged">Visiter</paper-tab>
         </paper-tabs>
          
         <iron-collapse id="collapse">
