style for close

--- a/src/dada-app/elements/dada-news.html
+++ b/src/dada-app/elements/dada-news.html
@@ -59,13 +59,21 @@
 
             .img-responsive {
                 display: block;
-                width: 100% \9;
+                width: 100%;
                 max-width: 100%;
                 height: auto;
             }
 
+            .img-responsive:hover{
+                display: block;
+                width: 100%;
+                max-width: 100%;
+                height: auto;
+                background-image: url('src/img/MAGRITTE-OVER.jpg');
+            }
+
             .article-container {
-                margin: -10px 10px 0;
+                margin: -15px 10px 0;
                 background-color: #fff;
                 position: relative;
                 z-index: 2;
@@ -74,7 +82,7 @@
             }
 
             .flex-item:hover .article-container {
-                margin: -10px 10px 0;
+                margin: -15px 10px 0;
                 background-color: #fff;
                 position: relative;
                 z-index: 2;
