todo : finir new content

--- a/src/dada-app/elements/dada-news.html
+++ b/src/dada-app/elements/dada-news.html
@@ -104,11 +104,13 @@
                 font-size: 4vw;
             }
 
-            .title-news{
+            .p{
                 font-size: 30px;
+                margin:2px;
                 text-align: justify;
                 font-weight: bold;
             }
+
 
         </style>
 
@@ -117,7 +119,8 @@
                 <div class=img-responsive>
                     <img src="src/img/MAGRITTE.jpg" class="img-responsive"></img>
                     <div class="article-container">
-                        <span class="title-news">Magritte, La trahison des images</span>
+                            <span class="title-news">Magritte, La trahison des images<span class="title-news">
+                            <span></span>
                     </div>
                 </div>
             </div>
@@ -133,7 +136,7 @@
                 <div class=img-responsive>
                     <img src="src/img/IRVINGPENN.jpg" class="img-responsive"></img>
                     <div class="article-container">
-                        <span class="title-news">Irving Penn</span>
+                            <span class="title-news">Irving Penn<span class="title-news">
                     </div>
                 </div>
 
